--- a/styles/global.css
+++ b/styles/global.css
@@ -68,6 +68,17 @@ main {
     margin-top: 40px;
 }
 
+.content-tag {
+display: inline-block;
+background-color: var(--brand-color-dark);
+padding: 4px 8px;
+border-radius: 4px;
+font: 500 18px/1.2 var(--font-family);
+text-transform: uppercase;
+letter-spacing: 0.04em;
+color: var(--text-color-primary);
+box-shadow: 0px 4px 16px #020617;
+}
 #featured {
     height: 100%;
     object-fit: cover;
@@ -85,5 +96,33 @@ main {
         background: linear-gradient(180deg,transparent 0%, #020617 100% );
 
 
+    } 
+    figcaption {
+        position: absolute;
+        bottom: 0;
+        padding: 24px;
+
+        h2 {
+            margin-top: 8px;
+        }
     }
+}
+
+.text-2x {
+
+    font: var(--h1);
+
+}
+
+.text-xl {
+
+font: var(--h2);
+}
+
+.text-lg {
+    font: var(--h3);
+}
+
+.text-sm {
+    font: var(--text-sm);
 }
