--- a/styles/global.css
+++ b/styles/global.css
@@ -12,9 +12,9 @@
 --text-color-primary: #f1f5f9;
 --text-color-secundary: #cbd5e1;
 --font-family: 'Archivo'.sans-serif;
---h1: 800 24px/135% var(var(--font-family));
---h2: 800 24px/135% var(var(--font-family));
---h3: 800 24px/135% var(var(--font-family));
+--h1: 800 24px/135% var(--font-family);
+--h2: 800 24px/135% var(--font-family);
+--h3: 800 24px/135% var(--font-family);
 --text-span: 600 14px/145% var(--font-family);
 --text-sm: 400 14px/160% var(--font-family);
 --text: 400 16px/140% var(--font-family);
@@ -105,6 +105,9 @@ box-shadow: 0px 4px 16px #020617;
         h2 {
             margin-top: 8px;
         }
+
+    &::has(text-lg) { padding: 12px;
+    }
     }
 }
 
