--- a/styles/global.css
+++ b/styles/global.css
@@ -1,131 +1,123 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 :root {
---brand-color-light: #60a5fa;
---brand-color-dark: #1d4ed8;
---bg-color: #0f172a;
---stroke-color: #1e293b;
---text-color-primary: #f1f5f9;
---text-color-secundary: #cbd5e1;
---font-family: 'Archivo'.sans-serif;
---h1: 800 24px/135% var(--font-family);
---h2: 800 24px/135% var(--font-family);
---h3: 800 24px/135% var(--font-family);
---text-span: 600 14px/145% var(--font-family);
---text-sm: 400 14px/160% var(--font-family);
---text: 400 16px/140% var(--font-family);
+    --brand-color-light: #60A5FA;
+    --brand-color-dark: #1D4ED8;
+    --bg-color: #0F172A; /*background color*/
+    --stroke-color: #1E293B;
+    --text-color-primary: #F1F5F9;
+    --text-color-secondary: #CBD5E1;
 
+    --font-family: 'Archivo', sans-serif;
+    --title-lg: 800 24px/135% var(--font-family);
+    --title-md: 700 16px/140% var(--font-family);
+    --title-sm: 600 14px/140% var(--font-family);
 
-
+    
+    --text-subtitle: 600 14px/145% var(--font-family);
+    --text-md: 400 14px/145% var(--font-family);
+    --text-sm: 400 14px/160% var(--font-family); /*small é o paragraph padrão do figma*/
 }
 
 body {
-color: var(--text-color-primary);
-background-color: var(--bg-color);
-font: var(--text)
+    color: var(--text-color-primary);
+    background-color: var(--bg-color);
+    
 }
 
 a {
-
-text-decoration: none;
-color: inherit;
+    text-decoration: none;
+    color: inherit; /*herdar a cor que está no body*/
 }
+
 a:hover {
     color: var(--brand-color-light);
 }
-h1, h2, h3 {
+
+h1, h1, h3 {
     font: inherit;
 }
 
-
-.container {
-    max-width: 1280px;
-    padding-inline: 32px;
-    margin-inline: auto;
-}
-.grid {
-    display: grid;
-}
-.grid-flow-col {
-grid-auto-flow: column;
-
-}
-
-.grid-col-2 {
-    grid-template-columns: 1fr 1fr;
-}
 img {
     max-width: 100%;
+   
 }
-.gap-16{
-    gap: 16px;
+
+.container {
+    max-width: 1280px; /*valor do auto layout figma, tamanho container*/
+    padding-inline: 32px; /*espaço em cima e baixo*/
+    margin-inline: auto; /*espaço eixo horizontal*/
 }
+
 main {
-    margin-top: 40px;
+    margin-block: 52px; /*cima e embaixo*/
+    row-gap: 80px;
+    column-gap: 32px; /*espaço entre os elementos ads e a IA*/
+
+    grid-template-columns: 2fr 1.37fr;
+
+    grid-template-areas:
+     "featured featured"
+     "weekly weekly"
+     "IA aside";
 }
+
 
 .content-tag {
-display: inline-block;
-background-color: var(--brand-color-dark);
-padding: 4px 8px;
-border-radius: 4px;
-font: 500 18px/1.2 var(--font-family);
-text-transform: uppercase;
-letter-spacing: 0.04em;
-color: var(--text-color-primary);
-box-shadow: 0px 4px 16px #020617;
+    display: inline-block; /*quero os dois comportamentos, o padding se comporta melhor*/
+    background-color: var(--brand-color-dark);
+    padding: 5px 8px;
+    border-radius: 4px;
+    font: 500 10px/1.2 var(--font-family); /*peso 500, 10px com 1.2 altura de linha*/
+    text-transform: uppercase;
+    letter-spacing: 0.04em;
+    color: var(--text-color-primary);
+    box-shadow: 0px 4px 16px rgba(2, 6, 23, 0.251);
+    
 }
-#featured {
-    height: 100%;
-    object-fit: cover;
-  
+
+
+/* Por padrão, os elementos aparecem */
+.desktop-only {
+    display: initial;
 }
-.card {
-  border-radius: 4px;
-  position: relative;
-  overflow: hidden;
-    &::before {
-        content: "";
-        position: absolute;
-        inset: 0;
-        top: 50%;
-        background: linear-gradient(180deg,transparent 0%, #020617 100% );
 
-
-    } 
-    figcaption {
-        position: absolute;
-        bottom: 0;
-        padding: 24px;
-
-        h2 {
-            margin-top: 8px;
-        }
-
-    &::has(text-lg) { padding: 12px;
+/* Oculta os elementos em telas menores que 768px */
+@media (max-width: 767px) {
+    .desktop-only {
+        display: none;
     }
+
+    .container {
+        display: grid;
+        --max-width: 375px; /*fator máximo que é permitido de largura, pois é o tamanho width tela mobile figma*/
+        width: min(var(--max-width), 100% - var(--padding-inline-lg) * 2);
+        padding-inline: 1rem;
     }
-}
 
-.text-2x {
+    main {  
+        margin-block: 52px; /*cima e embaixo*/
+        row-gap: 2rem;
+        column-gap: 20px; /*espaço entre os elementos ads e a IA*/
 
-    font: var(--h1);
+        grid-template-rows: 1fr;
+        grid-template-areas:
+        "featured featured"
+        "weekly weekly"
+        "IA IA"
+        "aside aside";
+    }
 
-}
+    aside {
+        order: 2;
+        grid-column: 1 / -1; /* Garante que o aside ocupe toda a largura disponível */
+        padding: 16px; /* Ajuste de padding para melhorar o espaçamento */
+        width: 100%;
+    }
 
-.text-xl {
-
-font: var(--h2);
-}
-
-.text-lg {
-    font: var(--h3);
-}
-
-.text-sm {
-    font: var(--text-sm);
 }
